DROID-8344 Add 16KB page size support

--- a/ananas/build.gradle
+++ b/ananas/build.gradle
@@ -30,6 +30,14 @@ android {
     kotlinOptions {
         jvmTarget = "17"
     }
+
+    ndkVersion "27.3.13750724"
+
+    externalNativeBuild {
+        ndkBuild {
+            path file('jni/Android.mk')
+        }
+    }
 }
 
 dependencies {
